# netcdf-dani

./: CMakeLists.txt
qt/netcdf_viewer/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mygraphicsview.cpp  mygraphicsview.h
src/: NcFile.h  bitpartition.h  colors.h  gps.h  main.cpp
